--- a/tp2/docker-compose.yml
+++ b/tp2/docker-compose.yml
@@ -4,21 +4,19 @@ services:
   db:
     image: mysql:5.7
     environment:
-      MYSQL_DATABASE: ${DATABASE_NAME}
-      MYSQL_USER: ${DATABASE_USERNAME}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
+      MYSQL_DATABASE: mysql
+      MYSQL_ROOT_PASSWORD: password 
     ports:
-      - ${DATABASE_PORT}:3306
+      - "3306: 3306"
   app:
     build: .
     environment:
       DATABASE_HOST: db
       DATABASE_PORT: 3306
-      DATABASE_USERNAME: ${DATABASE_USERNAME}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      DATABASE_NAME: ${DATABASE_NAME}
+      DATABASE_USERNAME: root
+      DATABASE_PASSWORD: password
+      DATABASE_NAME: mysql
     ports:
-      - ${APP_PORT}:3000
+      - "3000: 3000"
     depends_on:
       - db
